# MMAAPP

./: CMakeLists.txt  axon.jl  classify.jl  freeends.jl  mean_aggl.cpp  mst2.jl  output.jl  process.jl  segments.jl  spine.jl  utils.jl
scripts/: axon.jl  mst2.jl
src/: Info.cpp  Info.h  Output.cpp  Output.h  Segmentation.cpp  Segmentation.h  Segments.cpp  Segments.h  main.cpp
